--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,11 @@ li {
     cursor: pointer;
    }
 }
+
+[nz-button] {
+  border-radius: 10px;
+}
+
+.ant-notification-notice {
+  border-radius: 10px;
+}
