--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -23,6 +23,11 @@
       text-align: center;
       font-weight: 600;
     }
+    &__content {
+      input{
+        margin-bottom: -15px;
+      }
+    }
     &__footer {
       display: flex;
       flex-direction: column;
@@ -32,5 +37,14 @@
     }
   }
 }
+
+.spinner{
+  top: 50%;
+      bottom: 0;
+      margin: auto;
+      transform: translateY(-50%);
+}
+
+
 
 
