Добавление продукта - почти работает, ошибка с авторизацией BEARER(не пускает на бэк)

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
           </a>
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu nzSelectable>
-              <li nz-menu-item>Разместить объявление</li>
+              <li nz-menu-item routerLink="add-new-ad">Разместить объявление</li>
               <li nz-menu-item>Профиль</li>
             </ul>
           </nz-dropdown-menu>
