--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,11 @@ li {
 }
 
 [nz-button] {
-  border-radius: 10px;
+  border-radius: 8px;
+}
+
+[nz-input] {
+  border-radius: 8px;
 }
 
 .ant-notification-notice {
