--- a/src/app/components/ad-creating/ad-creating.component.html
+++ b/src/app/components/ad-creating/ad-creating.component.html
@@ -10,15 +10,15 @@
     <nz-form-control [nzSpan]="14" [nzErrorTip]="errorTip">
 
       <nz-tree-select
-        [nzNodes]="(categories$ | async) || []"
+        [nzNodes]="(categories$| async) || []"
         formControlName="categoryId"
       ></nz-tree-select>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label [nzSpan]="6" nzRequired>Текст</nz-form-label>
+    <nz-form-label [nzSpan]="6" nzRequired>Описание</nz-form-label>
     <nz-form-control [nzSpan]="14" [nzErrorTip]="errorTip">
-      <textarea nz-input [nzAutosize]="{ minRows: 2, maxRows: 6 }" formControlName="text" ></textarea>
+      <textarea nz-input [nzAutosize]="{ minRows: 2, maxRows: 6 }" formControlName="description" ></textarea>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
@@ -28,16 +28,16 @@
     </nz-form-control>
   </nz-form-item>
   <!--   Использовать dadata, можно сохранять координаты, полный адрес и тд-->
-  <nz-form-item>
+  <!-- <nz-form-item>
     <nz-form-label [nzSpan]="6" nzRequired>Адрес</nz-form-label>
     <nz-form-control [nzSpan]="14" [nzErrorTip]="errorTip">
       <input nz-input formControlName="locationText" />
     </nz-form-control>
-  </nz-form-item>
+  </nz-form-item> -->
   <nz-form-item>
     <nz-form-label [nzSpan]="6" nzRequired>Фотографии</nz-form-label>
     <nz-form-control [nzSpan]="14" [nzErrorTip]="errorTip">
-      <nz-upload
+      <!-- <nz-upload
         nzAction="http://localhost:5000/photos/create"
         (nzChange)="handleChange($event)"
       >
@@ -45,7 +45,7 @@
           <span nz-icon nzType="upload"></span>
           Click to Upload
         </button>
-      </nz-upload>
+      </nz-upload> -->
     </nz-form-control>
   </nz-form-item>
     <button nz-button nzType="primary" type="submit">Создать</button>
