--- a/src/app/components/ad-creating/ad-creating.component.scss
+++ b/src/app/components/ad-creating/ad-creating.component.scss
@@ -5,3 +5,12 @@ nz-tree-select {
 .ng-tns-c134-2{
   border-radius: 8px;
 }
+
+.add {
+  margin-top: 250px;
+}
+
+.add-form__btn {
+  text-align: center;
+  margin-right: -50px;
+}
