--- a/src/app/components/ad-full/ad-full.component.html
+++ b/src/app/components/ad-full/ad-full.component.html
@@ -3,17 +3,23 @@
     {{ad?.name}}
   </h2>
   <div class="advertisement__content">
-    <div class="advertisement__content-image" *ngFor="let image of ad?.images; let i = index">
-      <nz-image-group *ngIf="i === 0">
-
-        <img nz-image width="600px" nzSrc="{{ image }}">
-      </nz-image-group>
+    <div class="advertisement__content-image">
+      <nz-carousel  [nzEnableSwipe]="false"  >
+        <div nz-carousel-content *ngFor="let image of ad?.images">
+          <!-- <img nz-image nzSrc="{{ image }}"> -->
+          <img class="advertisement-image" src="{{image}}" >
+        </div>
+      </nz-carousel>
     </div>
     <div class="advertisement__content-description">
-      
+      <h3>{{ ad?.dateTimeCreated }}</h3>
     </div>
     <div class="advertisement__content-communication">
       <h1 class="author-name">{{ ad?.authorName }}</h1>
+    </div>
+    <div class="advertisement__content-price">
+      <h1>{{ ad?.price }}</h1>
+      
     </div>
   </div>
 </div>
