--- a/src/app/components/ad-full/ad-full.component.scss
+++ b/src/app/components/ad-full/ad-full.component.scss
@@ -1,23 +1,112 @@
 .advertisement {
   
+  margin-top: 100px;
+
+  
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    &-title,
+    &-price {
+      font-size: 35px;
+      font-weight: 700;
+    }
+    &-left {
+      max-width: 800px;
+      display: flex; 
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+
   &__content {
     display: flex;
     justify-content: space-between;
+
+    &-communication {
+      border-radius: 20px;
+      box-shadow: 0px 0px 80px 0px rgba(0, 0, 0, 0.1);
+      max-width: 350px;
+      width: 100%;
+      padding: 25px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
   }
 
   &-image {
-    max-width: 600px;
-    height: 600px;
+    max-width: 800px;
+    height: 800px;
     object-fit: contain;
     display: flex;
     align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-shadow: 0px 0px 80px 0px rgba(0, 0, 0, 0.2);
+    &-bg {
+      max-width: 800px;
+      height: 800px;
+      object-fit: cover;
+      position: relative;
+      top: 0;
+      left: 0;
+      filter: blur(15px) brightness(1.5);
+    }
+  }
+
+  &__footer{
+    margin-top: 50px;
+    max-width: 800px;
+    padding: 25px;
+    &-description{
+      .title {
+        font-weight: 600;
+        padding-top: 15px;
+      }
+    }
+    border-radius: 20px;
+    box-shadow: 0px 0px 80px 0px rgba(0, 0, 0, 0.1);
   }
 
 }
 
+.author {
+  &-name {
+
+  }
+
+  &-number {
+    font-size: 16px;
+    height: 50px;
+    max-width: inherit;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  &-chat {
+    font-size: 16px;
+    height: 50px;
+    max-width: inherit;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+}
+
 nz-carousel {
-  max-width: 600px;
-  max-height: 600px;
+  position: relative;
+  top: 0;
+  left: 0;
+  max-width: 800px;
+  max-height: 800px;
   border-radius: 25px;
   background-color: #9692929c;
+  box-shadow: 0px 0px 80px 0px rgba(0, 0, 0, 0.1);
 }
