--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,6 +9,10 @@
   display: flex;
   justify-content: space-between;
   height: 50px;
+  &__bg {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 130px 10px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .navbar__section {
@@ -26,7 +30,7 @@
 
 
 [nz-button] {
-  border-radius: 15px;
+  border-radius: 20px;
 }
 
 [nz-menu] {
@@ -39,8 +43,10 @@
 }
 
 .search {
+  max-width: 1000px;
+  margin:0 auto;
   margin-top: 40px;
-  margin-left: 10px;
+  margin-bottom: 70px;
   
   display: flex;
   justify-content: space-between;
@@ -48,15 +54,11 @@
   &-input {
     border-radius: 0px;
     height: 40px;
+    margin: 0px 20px;
+  }
+
+  &-button {
+    height: 40px;
   }
 }
 
-
-.ant-select-selector {
-
-  border-radius: 15px!important;
-}
-
-.ant-select-selector {
-
-}
