--- a/src/app/components/ad-creating/ad-creating.component.scss
+++ b/src/app/components/ad-creating/ad-creating.component.scss
@@ -14,6 +14,10 @@ nz-tree-select {
 
     }
 
+    &__address {
+      border-radius: 10px;
+    }
+
     &__btn {
     text-align: center;
     margin-right: -50px;
@@ -21,4 +25,10 @@ nz-tree-select {
   }
 
 
+}
+
+
+
+input[type=text][_ngcontent-nlp-c113]{
+  background-color: #fff!important;
 }
