--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -31,8 +31,8 @@
     </div>
   </div>
   <div class="container">
-    <div class="search">
-        <button class="search-button" nz-button  nzType="primary" (click)="open()">Категория</button>
+    <div class="search__section">
+        <button class="search__section-button" nz-button  nzType="primary" (click)="open()">Категория</button>
     <nz-drawer
       [nzClosable]="false"
       [nzVisible]="visible"
@@ -45,8 +45,8 @@
       </ng-container>
     </nz-drawer>
 
-      <input class="search-input" style="border-radius: 20px;"  type="text" nz-input nz-Search placeholder="Поиск по объявлениям" />
-      <button class="search-button" nz-button nzType="primary"><span nz-icon nzType="search"></span> Найти</button>
+      <input class="search__section-input" style="border-radius: 20px;"  type="text" nz-input nz-Search placeholder="Поиск по объявлениям" />
+      <button class="search__section-button" nz-button nzType="primary"><span nz-icon nzType="search"></span> Найти</button>
     </div>
     
   </div>
